--- a/test code/Demo 1 Code/Charger/EspCodeDemo1/platformio.ini
+++ b/test code/Demo 1 Code/Charger/EspCodeDemo1/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	plapointe6/EspMQTTClient@^1.13.3
+;	plapointe6/EspMQTTClient@^1.13.3
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	miguelbalboa/MFRC522@^1.4.10
