--- a/test code/Charging Station Module/Charging Station/platformio.ini
+++ b/test code/Charging Station Module/Charging Station/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	plapointe6/EspMQTTClient@^1.13.3
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	miguelbalboa/MFRC522@^1.4.10
