--- a/test code/Office Building Module/OfficeBuilding/platformio.ini
+++ b/test code/Office Building Module/OfficeBuilding/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = plapointe6/EspMQTTClient@^1.13.3
+lib_deps = 
+	plapointe6/EspMQTTClient@^1.13.3
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
