--- a/test code/PLB/ESP industry/platformio.ini
+++ b/test code/PLB/ESP industry/platformio.ini
@@ -17,16 +17,10 @@ lib_deps =
 	arduino-libraries/Servo@^1.1.8
 	madhephaestus/ESP32Servo@^0.12.0
 	plapointe6/EspMQTTClient@^1.13.3
-build_flags = -std=c++17 #maybe with -std=c++11
-
-; [env]
-; test_framework = googletest
+build_flags = -std=c++17
 
 [env:native]
-test_framework = googletest
 platform = native
-test_ignore = test_embedded
+test_framework = googletest
 lib_compat_mode = off
-lib_deps = 
-	google/googletest@^1.12.1
-build_flags = -std=c++17 #maybe with -std=c++11
+build_flags = -std=c++17
