--- a/test code/PLB/ESP industry/platformio.ini
+++ b/test code/PLB/ESP industry/platformio.ini
@@ -17,10 +17,10 @@ lib_deps =
 	arduino-libraries/Servo@^1.1.8
 	madhephaestus/ESP32Servo@^0.12.0
 	plapointe6/EspMQTTClient@^1.13.3
-build_flags = -std=c++17
+build_flags = -std=c++17 ;-DCOMMENTS
 
 [env:native]
 platform = native
 test_framework = googletest
 lib_compat_mode = off
-build_flags = -std=c++17
+build_flags = -std=c++17 -DMOCKS
